--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,37 @@
   <!-- Header CSS (First Sections of Website: paste after release from header.min.css here) -->
   <style></style>
   
-  
+
+    <!-- Табы -->
+    <button class="change-style">change</button>
+  <div class="alpin-ui alpin-tabs">
+      <div class="trigger-container">
+        <div class="trigger active-trigger" data-target="my-content1">tab1</div>
+        <div class="trigger" data-target="my-content2">tab2</div>
+        <div class="trigger" data-target="my-content3">tab3</div>
+        <div class="trigger" data-target="my-content4">tab4</div>
+        <div class="trigger" data-target="my-content5">tab5</div>
+      </div>
+      <div class="content-container">
+        <div class="my-content active-content" id="my-content1">
+          <h2>heading1</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit corporis, suscipit dolores delectus nostrum itaque necessitatibus in deleniti, vitae quisquam, accusantium velit voluptatum. Doloremque eligendi debitis inventore magnam dolorem? Hic.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum ipsa suscipit, in unde aut maiores, provident consectetur tenetur architecto blanditiis nostrum repudiandae eius neque, accusantium, quam beatae molestiae officiis vitae!
+        </div>
+        <div class="my-content" id="my-content2">
+          <h2>heading2</h2>Dolore quia cumque distinctio quis labore alias facere inventore minus, doloribus repellat praesentium earum? Quae mollitia quasi, officiis placeat. Ipsam veniam facere vero, deleniti vel illum rerum adipisci magni laborum.
+        </div>
+        <div class="my-content" id="my-content3">
+          <h2>heading3</h2>Quaerat corporis amet voluptatum tempore et at assumenda minima odio, voluptas harum doloremque dolor eos vero omnis repudiandae adipisci nisi accusamus distinctio dolores animi molestias. Maxime voluptate exercitationem, quibusdam iure!
+        </div>
+        <div class="my-content" id="my-content4">
+          <h2>heading4</h2>Quibusdam deleniti praesentium minima facere a, eos, facilis labore animi cum excepturi est voluptatibus? Facilis eos nam delectus totam iusto, ex adipisci deleniti. Perferendis modi assumenda aut deserunt quidem, facilis?
+        </div>
+        <div class="my-content" id="my-content5">
+          <h2>heading5</h2>Omnis, pariatur eos consequuntur quaerat, corrupti veritatis dolores error nisi labore suscipit laborum itaque rem, maiores doloremque harum sed. Voluptatibus neque cum consectetur. Accusamus nostrum pariatur quae explicabo quidem id?
+        </div>
+      </div>  
+  </div>
+
 
 
     <!--[if lt IE 9]>
