основные стили для окон

--- a/app/index.html
+++ b/app/index.html
@@ -18,22 +18,29 @@
   
 
     <!-- Табы -->
-    <button class="change-style">change</button>
-  <div class="alpin-ui alpin-tabs">
+    <button class="change-style-accordion">Аккордион</button>
+    <button class="change-style-tabs">Табы</button>
+    <button class="change-style-lightbox">Окна</button>
+  <div class="alpin-ui alpin-lightbox">
       <div class="trigger-container">
-        <div class="trigger active-trigger" data-target="my-content1">tab1</div>
-        <div class="trigger" data-target="my-content2">tab2</div>
+        <div class="trigger" data-target="my-content1">tab1</div>
+        <div class="trigger active-trigger" data-target="my-content2">tab2</div>
         <div class="trigger" data-target="my-content3">tab3</div>
         <div class="trigger" data-target="my-content4">tab4</div>
         <div class="trigger" data-target="my-content5">tab5</div>
       </div>
       <div class="content-container">
-        <div class="my-content active-content" id="my-content1">
+        <div class="my-content" id="my-content1">
           <h2>heading1</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit corporis, suscipit dolores delectus nostrum itaque necessitatibus in deleniti, vitae quisquam, accusantium velit voluptatum. Doloremque eligendi debitis inventore magnam dolorem? Hic.
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum ipsa suscipit, in unde aut maiores, provident consectetur tenetur architecto blanditiis nostrum repudiandae eius neque, accusantium, quam beatae molestiae officiis vitae!
         </div>
-        <div class="my-content" id="my-content2">
+        <div class="my-content active-content" id="my-content2">
           <h2>heading2</h2>Dolore quia cumque distinctio quis labore alias facere inventore minus, doloribus repellat praesentium earum? Quae mollitia quasi, officiis placeat. Ipsam veniam facere vero, deleniti vel illum rerum adipisci magni laborum.
+          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat rem, exercitationem sequi soluta dolorem repellendus veniam, et, praesentium adipisci nisi ullam provident quasi quam. Dignissimos, reprehenderit minus iusto laudantium et.</div>
+          <div>Ea dolore minima dolores fugiat ex optio autem beatae, architecto atque amet dolorem enim id doloribus assumenda suscipit illum expedita quasi in eveniet nostrum modi sed magni quibusdam distinctio? Aliquid!</div>
+          <div>Repellendus, unde, cum. Iste asperiores hic vel quasi sapiente sed, consectetur quaerat, quo ut commodi ipsam corporis voluptatem magnam consequatur provident in est voluptatibus nam excepturi autem! Assumenda, quaerat, laudantium.</div>
+          <div>Qui nisi quasi, repudiandae iure recusandae. Earum doloremque quae, quas excepturi. Veniam facilis praesentium quo tempore, sunt officia minima impedit ducimus, molestias quidem libero, explicabo aliquid nemo. Repellat, dignissimos, voluptas!</div>
+          <div>Officia, neque, esse. Maiores natus, numquam sit modi quibusdam corrupti atque illum incidunt odio perspiciatis tempore, recusandae explicabo, beatae placeat nobis vitae optio cumque ipsam iste esse nihil distinctio dolor.</div>
         </div>
         <div class="my-content" id="my-content3">
           <h2>heading3</h2>Quaerat corporis amet voluptatum tempore et at assumenda minima odio, voluptas harum doloremque dolor eos vero omnis repudiandae adipisci nisi accusamus distinctio dolores animi molestias. Maxime voluptate exercitationem, quibusdam iure!
