Изменили позиционироване окон

--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,12 @@
   <style></style>
   
 
-    <!-- Табы -->
+    <!-- Кнопки для тестрования -->
     <button class="change-style-accordion">Аккордион</button>
     <button class="change-style-tabs">Табы</button>
     <button class="change-style-lightbox">Окна</button>
+  
+  <!-- основная разметка -->
   <div class="alpin-ui alpin-lightbox">
       <div class="trigger-container">
         <div class="trigger" data-target="my-content1">tab1</div>
