--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
     <![endif]-->
 
     <!-- Load Scripts Start -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>var scr = {"scripts":[
       {"src" : "js/libs.min.js", "async" : true},
       {"src" : "js/common.js", "async" : true}
