--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,10 @@
     <button class="change-style-accordion">Аккордион</button>
     <button class="change-style-tabs">Табы</button>
     <button class="change-style-lightbox">Окна</button>
+    <button class="change-style-slider">Слайдер</button>
   
   <!-- основная разметка -->
-  <div class="alpin-ui alpin-lightbox">
+  <div class="alpin-ui alpin-slider">
       <div class="trigger-container">
         <div class="trigger" data-target="my-content1">tab1</div>
         <div class="trigger active-trigger" data-target="my-content2">tab2</div>
